# handlebar

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  pyproject.toml  replit.md
.claude/: settings.json
.claude/hooks/: run-tests.sh
answers/: alex1.json  alex2.json  alex3.json  dylan1.json  example1.json  example1.txt  example3.json  example_eric.json
docs/: app_prompt.md  architecture.md  playa_nickname_booth_flow.md
scripts/: dump_logs.py  start_server.sh
src/: main.py
src/core/: prompt.py
src/data/: questions.py  styles.py
src/llm/: __init__.py  base.py  claude_client.py  ollama_client.py  openai_client.py  prompt.py
src/session_logging/: __init__.py  __main__.py  session_logger.py
src/ui/: feedback.py  questionnaire.py  terminal.py  theme.py
tests/: test_data.py  test_questionnaire.py  test_terminal.py
