[project]
name = "handlebar"
version = "0.1.0"
description = "Playa Nickname Booth - Terminal-based nickname generator"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
handlebar = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
