[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "handlebar"
version = "0.1.0"
description = "Playa Nickname Booth - Terminal-based nickname generator"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "prompt_toolkit>=3.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyfiglet>=0.8",
]

[project.scripts]
handlebar = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
